[tool.poetry]
name = "domashka-milya"
version = "0.1.0"
description = ""
authors = ["Viktor <flystrike1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
isort = "^5.13.2"


[tool.poetry.group.lin.dependencies]
mypy = "^1.10.1"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
